# risc0-lido-accounting-oracle

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  build_membership_inputs.sh  input_membership_initialization_11494239.input  justfile
.github/workflows/: main.yml
apps/: Cargo.toml
apps/src/: beacon_client.rs  lib.rs  multiproof_builder.rs
cli/: Cargo.toml
cli/src/: beacon_client.rs  main.rs
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  config.toml
contracts/src/: BlockRoots.sol  IOracleProofReceiver.sol  ISecondOpinionOracle.sol  ITestVerifier.sol  SecondOpinionOracle.sol  TestVerifier.sol
contracts/test/: Oracle.t.sol
contracts/tests/: Oracle.t.sol
core/: Cargo.toml
core/src/: balance_iterator.rs  beacon_types.rs  error.rs  gindices.rs  io.rs  lib.rs  merkle_proof_verification.rs  multiproof_builder.rs  multiproof_verification.rs
crates/beacon-state/: Cargo.toml
crates/beacon-state/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  generate_report.rs  input.rs  io.rs  journal.rs  lib.rs  receipt.rs
crates/core/src/membership/: io.rs  mod.rs
crates/core/src/oracle/: io.rs  mod.rs
crates/core/tests/: generate_report.rs
crates/gindices/: Cargo.toml  _build.rs  build.rs
crates/gindices/src/: gen_post_electra.rs  gen_pre_electra.rs  gindices.rs  lib.rs
crates/guest-io/: Cargo.toml
crates/guest-io/src/: error.rs  io.rs  lib.rs
crates/rkyv_wrappers/: Cargo.toml
crates/rkyv_wrappers/src/: bitvec.rs  fixedbytes.rs  lib.rs
crates/ssz-multiproofs/: Cargo.toml
crates/ssz-multiproofs/src/: builder.rs  error.rs  lib.rs  multiproof.rs  multiproof_builder.rs  tests.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/tracing-risc0/: Cargo.toml
crates/tracing-risc0/src/: lib.rs
guests/: Cargo.toml  build.rs
guests/balance_and_exits/: Cargo.toml  build.rs
guests/balance_and_exits/guest/: Cargo.toml
guests/balance_and_exits/guest/src/: lib.rs  main.rs
guests/balance_and_exits/src/: lib.rs  main.rs
guests/membership/: Cargo.toml  build.rs
guests/membership/guest/: Cargo.toml  README.md
guests/membership/guest/src/: lib.rs  main.rs
guests/membership/src/: lib.rs
guests/oracle/: Cargo.toml  build.rs
guests/oracle/guest/: Cargo.toml
guests/oracle/guest/src/: lib.rs
guests/oracle/src/: lib.rs
guests/validator_membership/: Cargo.toml
guests/validator_membership/src/: main.rs
methods/: Cargo.toml
methods/balance_and_exits/: Cargo.toml  README.md
methods/balance_and_exits/src/: main.rs
methods/src/: lib.rs
methods/validator_membership/: Cargo.toml
methods/validator_membership/src/: main.rs
