[workspace]
resolver = "2"
members = ["apps", "methods", "core"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
lido-oracle-core.path = "./core"

alloy = { version = "0.6", features = ["full"] }
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "1.2", features = ["docker"] }
# using git references here to ensure this matches the submodules in ./lib
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.2.0" }
risc0-zkvm = { version = "1.2", default-features = false }
risc0-zkp = { version = "1.2", default-features = false }

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b", default-features = false, features = ["serde"] }
ssz_rs = { path = "../ssz-rs/ssz-rs" }

serde = { version = "1.0", features = ["derive", "std"] }
url = { version = "2.5" }
bitvec = { version = "1", features = ["serde"] }
sha2 = "0.10.8"

[profile.release]
debug = 1
lto = true

[patch."https://github.com/ralexstokes/ssz-rs"]
# Get the merkle tree empty node virtualization so non-trivial merkle trees actually fit in memory
ssz_rs = { path = "../ssz-rs/ssz-rs" }
