[workspace]
resolver = "2"
members = ["guests/oracle", "crates/gindices", "crates/core", "crates/test-utils", "crates/beacon-state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
gindices.path = "./crates/gindices"
lido_oracle_core.path = "./crates/core"
oracle_builder.path = "./guests/oracle"
test-utils.path = "./crates/test-utils"
beacon-state.path = "./crates/beacon-state"

alloy = { version = "0.15", features = ["full"] }
alloy-primitives = { version = "1.2.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.2.1" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
hex = { version = "0.4" }
log = { version = "0.4" }
methods = { path = "./methods" }
risc0-build = { version = "2.1", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0", default-features = false }
risc0-zkvm = { version = "2.3.1" }
risc0-zkp = { version = "2.0.2" }
risc0-zkvm-platform = { version = "2.0.3", default-features = false }
revm = { version = "23.1", default-features = false, features = ["std"] }

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "ade5ce6c4a19107c1059e5338d8f18855bd2d931", default-features = false, features = ["serde"] }
ssz_rs = { git = "https://github.com/willemolding/ssz-rs", rev = "d939604c3693aadaff63dcacf9a810d8845fafef"}
ssz-multiproofs = { git = "https://github.com/boundless-xyz/Signal-Ethereum", tag = "v1.0.0" }

serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.133"
url = { version = "2.5" }
bitvec = { version = "1", features = ["serde"] }
sha2 = "0.10.8"
tracing = "0.1.41"

tokio = { version = "1.35", features = ["full"] }

[patch."https://github.com/ralexstokes/ssz-rs"]
# Get the merkle tree empty node virtualization so non-trivial merkle trees actually fit in memory
ssz_rs = { git = "https://github.com/willemolding/ssz-rs", rev = "d939604c3693aadaff63dcacf9a810d8845fafef"}
