[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
lido-oracle-core.workspace = true

alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
tokio = { version = "1.35", features = ["full"] }
url = { workspace = true }
ethereum-consensus.workspace = true
serde.workspace = true
thiserror = "2.0.6"
reqwest = "0.12.9"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest-cache = "0.1.3"
reqwest-middleware = "0.4.0"
http-cache-reqwest = "0.15.0"
bytemuck.workspace = true
