[package]
name = "lido-oracle-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
alloy-primitives.workspace = true
risc0-zkvm.workspace = true
bitvec.workspace = true
anyhow.workspace = true
ssz_rs.workspace = true

[dev-dependencies]
ethereum-consensus.workspace = true
serde_json = "1.0.133"