[package]
name = "lido-oracle-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["builder"]
builder = ["dep:ssz_rs", "dep:ethereum-consensus"]

[dependencies]
serde.workspace = true
sha2.workspace = true
alloy-primitives.workspace = true
risc0-zkvm.workspace = true
bitvec.workspace = true
ssz_rs = { workspace = true, optional = true }
ethereum-consensus = { workspace = true, optional = true }
thiserror = "2.0.6"
tracing.workspace = true

[dev-dependencies]
ethereum-consensus.workspace = true
serde_json = "1.0.133"
anyhow.workspace = true
