[package]
name = "gindices"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
ssz_rs.workspace = true
ethereum-consensus.workspace = true
anyhow.workspace = true
beacon-state.workspace = true

[build-dependencies]
ssz_rs.workspace = true
ethereum-consensus.workspace = true
beacon-state.workspace = true
