[package]
name = "guest-io"
version = "0.1.0"
edition = "2021"

[features]
default = []
builder = ["ssz-multiproofs/builder", "dep:ssz_rs", "dep:ethereum-consensus", "dep:gindices"]
progress-bar = ["ssz-multiproofs/progress-bar"]

[dependencies]
ssz-multiproofs = { workspace = true }

serde.workspace = true
alloy-primitives.workspace = true
risc0-zkvm.workspace = true
bitvec.workspace = true
thiserror = "2.0.6"
tracing.workspace = true
rkyv.workspace = true
rkyv-wrappers.workspace = true

# Optional dependencies
gindices = { workspace = true, optional = true }
ssz_rs = { workspace = true, optional = true }
ethereum-consensus = { workspace = true, optional = true }
