[package]
name = "guest-io"
version = "0.1.0"
edition = "2021"

[features]
default = []
builder = ["ssz-multiproofs/builder", "dep:ssz_rs", "dep:ethereum-consensus", "dep:gindices", "dep:beacon-state", "risc0-steel/host"]

[dependencies]
ssz-multiproofs = { workspace = true }

risc0-steel = { workspace = true, default-features = false }
serde.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
risc0-zkvm.workspace = true
bitvec.workspace = true
thiserror = "2.0.6"
tracing.workspace = true
bytemuck.workspace = true
revm = { workspace = true }


# Optional dependencies
gindices = { workspace = true, optional = true }
ssz_rs = { workspace = true, optional = true }
ethereum-consensus = { workspace = true, optional = true }
beacon-state = { workspace = true, optional = true}
