[package]
name = "test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
lido_oracle_core = { workspace = true, features = ["builder"] }
gindices.workspace = true
bitvec = { workspace = true }
ethereum-consensus = { workspace = true }
anyhow = { workspace = true }
beacon-state = { workspace = true }
