[package]
name = "tracing-risc0"
version.workspace = true
edition.workspace = true

[dependencies]
risc0-zkvm = { version = "1.2", default-features = false, features = ['std'] }
risc0-zkvm-platform = { version = "1.2", default-features = false }
tracing-subscriber = { version = "0.3.19" }
tracing = "0.1.41"
