[package]
name = "balance_and_exits_builder"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client", "unstable"] }
risc0-steel = { workspace = true, features = ["host"] }
gindices.workspace = true
guest-io = { workspace = true, features = ["builder"] }
bitvec = { workspace = true }
ethereum-consensus = { workspace = true }
anyhow = { workspace = true }
membership_builder = { path = "../membership" }
test-utils = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
revm = {workspace = true}
