[package]
name = "membership_builder"
version = { workspace = true }
edition = { workspace = true }

[features]
sepolia = []

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
hex = { workspace = true }
risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-zkp = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
guest-io = { workspace = true, features = ["builder"] }
gindices.workspace = true
bitvec = { workspace = true }
ethereum-consensus = { workspace = true }
anyhow = { workspace = true }
test-utils = { workspace = true }