[package]
name = "validator_membership"
edition = "2021"

[workspace]

[dependencies]
guest-io = { path = "../../crates/guest-io", default-features = false }
gindices = { path = "../../crates/gindices" }
ssz-multiproofs = { path = "../../crates/ssz-multiproofs" }

bitvec = { version = "1", features = ["serde"] }
serde = "1.0.215"
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }

risc0-zkvm = { version = "1.2", default-features = false, features = ['std'] }
risc0-zkp = { version = "1.2" }

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.test]
inherits = "release"
