[package]
name = "balance_and_exits"
edition = "2021"

[workspace]

[dependencies]
guest-io = { path = "../../../crates/guest-io", default-features = false }
gindices = { path = "../../../crates/gindices" }
ssz-multiproofs = { path = "../../../crates/ssz-multiproofs", default-features = false }
tracing-risc0 = { path = "../../../crates/tracing-risc0" }
membership_builder = { path = "../../membership" }

bitvec = { version = "1", features = ["serde"] }
serde = "1.0.215"
alloy-primitives = { version = "0.7", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.7" }

risc0-zkvm = { version = "1.2", default-features = false, features = ['std'] }
risc0-zkp = { version = "1.2" }
risc0-zkvm-platform = { version = "1.2", features = ["sys-getenv"] }

tracing-subscriber = { version = "0.3.19" }
tracing = "0.1.41"

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
