[package]
name = "validator_membership"
edition = "2021"

[workspace]

[features]
skip-verify = []

[dependencies]
guest-io = { path = "../../../crates/guest-io", default-features = false }
gindices = { path = "../../../crates/gindices" }

bitvec = { version = "1", features = ["serde"] }
serde = "1.0.215"
alloy-primitives = { version = "1.2.1", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "1.2.1" }
bincode = { version = "1.3" }

risc0-zkvm = { version = "2.3.1", default-features = false, features = ['std', 'unstable'] }
risc0-zkp = { version = "2.0.2" }
risc0-zkvm-platform = { version = "2.0.3", features = ["sys-getenv"] } # WARNING: This feature is dangerous as it allows skipping composition checks via the RISC0_DEV_MODE var
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", tag = "v2.1.0", default-features = false}

ssz-multiproofs = { git = "https://github.com/boundless-xyz/Signal-Ethereum", tag = "v1.0.0" }

tracing = "0.1.41"

[patch.crates-io]
# Placing this patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 accelerator
# support for all downstream usages of the `sha2` crate.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.test]
inherits = "release"
